--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,9 +53,58 @@ jobs:
       - name: Build Frontend
         run: npm run build
 
-  # Stage 3: Docker Integration (Build & Test Containers)
+  # Stage 3: Database CI
+  database-ci:
+    runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: bike_accessories
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
+    defaults:
+      run:
+        working-directory: ./server
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+          cache: "npm"
+          cache-dependency-path: server/package-lock.json
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Wait for MySQL to be ready
+        run: |
+          until mysqladmin ping -h 127.0.0.1 -u root --password=root --silent; do
+            echo "Waiting for MySQL..."
+            sleep 5
+          done
+
+      - name: Test Database Initialization
+        env:
+          DB_HOST: 127.0.0.1
+          DB_USER: root
+          DB_PASSWORD: root
+          DB_NAME: bike_accessories
+        run: node init-db.js
+
+  # Stage 4: Docker Integration (Build & Test Containers)
   docker-integration:
-    needs: [backend-ci, frontend-ci]
+    needs: [backend-ci, frontend-ci, database-ci]
     runs-on: ubuntu-latest
 
     steps:
